20/09/13 top menu gone, middle of ts and cs

--- a/app/views/static_pages/tac.html.erb
+++ b/app/views/static_pages/tac.html.erb
@@ -1,4 +1,43 @@
-<div id='main'>
+<div id='main_full_width'>
 	<h1>Terms and Conditions</h1>
-	<p>Terms and conditions go here!</p>
+	<p>By using this service you are confirming that you understand and agree to be legally bound by these Terms and Conditions.</p>
+	<p>IF YOU DO NOT AGREE TO THESE TERMS AND CONDITIONS YOU SHOULD NOT USE THIS SERVICE.</p>
+	
+	<h3>1. Privacy and security</h3>
+	<p>Your privacy is important to us and the following information explains how we will use and protect it.</p>
+	<h4>a. Privacy of your information</h4>
+		<p> HomeBloodPressure.co.uk complies with the Data Protection Act 1998. We will use the information you provide with other information we obtain about you to:</p>
+		<p>- administer and provide the goods and/or services you request.</p>
+		<p>- improve our products and services.</p>
+		<p>- sometimes send promotional emails about new products, special offers or other information which we think you may find interesting using the email address which you have provided.</p>
+		<p>- from time to time, we may also use your information to contact you for market research purposes. We may contact you by email, phone, fax or mail. We may use the information to customise the website according to your interests.</p>
+		<p>Without your permission we will not share your personal information with any organisation other than those directly involved in delivering our services. With your consent and provided you provide the name, email and fax number for your GP, we will always offer to inform your GP of any medicines that we prescribe.</p>
+	<h4>b. Security</h4>
+		<p>HomeBloodPressure.co.uk uses security technology, including firewalls and Secure Socket Layers to protect information submitted through this website and has procedures in place to ensure paper and computer systems and databases are protected against unauthorised disclosure, use, loss and damage. Nevertheless, electronic transmissions are never completely private or secure and there is a risk, therefore, that any electronic communications sent may be intercepted and potentially read by others. You should, therefore, ensure that any computer you use to access our service is suitably protected from potential interception.</p>
+	<h4>c. How we use cookies</h4>
+		<p>A cookie is a small file which asks permission to be placed on your computer's hard drive. Once you agree, the file is added and the cookie helps analyse web traffic or lets you know when you visit a particular site. Cookies allow web applications to respond to you as an individual. The web application can tailor its operations to your needs, likes and dislikes by gathering and remembering information about your preferences. Please refer to <%= link_to 'www.allaboutcookies.org', 'http://www.allaboutcookies.org', :target => "_blank" %> for more information.</p>
+		<p>We use cookies as this is the most secure way for us to pass information you enter into our website onwards to our doctors. Other methods of achieving this do not meet our security standards and so our service and the website is not available without the use of cookies.</p>
+		<p>We also use traffic log cookies to identify which pages are being used, (Google Analytics and Adwords conversion tracking). This helps us analyse data about web page traffic and improve our website in order to tailor it to our patients’ needs. We only use this information for statistical analysis purposes and then the data is removed from the system.</p>
+		<p>Overall, cookies help us provide you with a better website, by providing secure transfer of information around the site and by enabling us to monitor which pages you find useful and which you do not. A cookie in no way gives us access to your computer or any information about you, other than the data you choose to share with us.</p>
+		<p>You can choose to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies if you prefer. However, this will prevent you from making use of the website. Continuing to use the website implies consent to the use of cookies.</p>
+	<h4>d. Links to other websites</h4>
+		<p>Our website may contain links to other websites of interest. However, once you have used these links to leave our site, you should note that we do not have any control over that other website. Therefore, we cannot be responsible for the protection and privacy of any information which you provide whilst visiting such sites and such sites are not governed by this privacy statement. You should exercise caution and look at the privacy statement applicable to the website in question.</p>
+	<h4>e. Controlling your personal information</h4>
+		<p>You may choose to restrict the collection or use of your personal information at any time by contacting us via the website or writing to us at the address below.</p>
+		<p>We will not sell, distribute or lease your personal information to third parties unless we have your permission or are required by law to do so. We may use your personal information to send you promotional information about third parties which we think you may find interesting if you tell us that you wish this to happen.</p>
+		<p>You may request details of personal information which we hold about you under the Data Protection Act 1998. A small fee will be payable. If you would like a copy of the information held on you please write to HomeBloodPressure.co.uk, 93 Palmerston Street, Derby, DE23 6PF.</p>
+		<p>If you believe that any information we are holding on you is incorrect or incomplete, please write to or email us as soon as possible. We will promptly correct any information found to be incorrect.</p>
+	
+	<h3>2. Registration</h3>
+		<p>In order to use the service, you will be required to register with HomeBloodPressure.co.uk. We reserve the right to suspend or terminate access to our service at any time if we believe that your continued use of our services will prejudice others or us. By registering to use the service, you:</p>
+		<p>- confirm that the information you provide is accurate and complete; and</p>
+		<p>- agree to keep your username and password confidential and to take reasonable steps to protect and not to share your login details with anyone; and</p>
+		<p>- confirm that you are aged 18 or over.</p>
+	
+	<h3>3. Our commitment to you</h3>
+		<p>HomeBloodPressure.co.uk commits:</p>
+	<h4>a. Professional responsibility</h4>
+		<p>To take professional responsibility for each patient who uses the service to the same extent as a doctor would have responsibility when meeting a patient face to face.</p>
+	<h4>b. Compliance</h4>
+		<p>To provide a professional and transparent service that complies with General Medical Council Guidelines on remote prescribing and clinical best practice in England. (Click <%= link_to 'here', 'http://www.gmc-uk.org/', :target => '_blank' %> to access the GMC website)</p>	
 </div>
