--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,21 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#main_full_width {
+  width: 930px;
+  
+  p {
+    margin: 0px 45px 10px 25px;
+    color: #000000;
+  }
+}
+
+h3 {
+  font-size: 16pt;
+  color: #0844a4;
+  font-weight: normal;
+  margin: 30px 0px 10px 0px;
+}
+
+h4 {
+  font-size: 12pt;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
