24/09/13 finished ts and cs, routing work and static pages

--- a/app/views/static_pages/tac.html.erb
+++ b/app/views/static_pages/tac.html.erb
@@ -39,5 +39,90 @@
 	<h4>a. Professional responsibility</h4>
 		<p>To take professional responsibility for each patient who uses the service to the same extent as a doctor would have responsibility when meeting a patient face to face.</p>
 	<h4>b. Compliance</h4>
-		<p>To provide a professional and transparent service that complies with General Medical Council Guidelines on remote prescribing and clinical best practice in England. (Click <%= link_to 'here', 'http://www.gmc-uk.org/', :target => '_blank' %> to access the GMC website)</p>	
+		<p>To provide a professional and transparent service that complies with General Medical Council Guidelines on remote prescribing and clinical best practice in England. (Click <%= link_to 'here', 'http://www.gmc-uk.org/', :target => '_blank' %> to access the GMC website)</p>
+	<h4>c. Provide identification</h4>
+		<p>To volunteer their name and General Medical Council professional registration number when prescribing medicines and communicating with patients.</p>
+	<h4>d. Prescribe in the best interest of the patient</h4>
+		<p>To prescribe medicines only when in their professional judgment it is in the patient's best interests to receive the medicine and, accordingly, to refuse to prescribe medicines when they believe it is not in the patient's best interests to receive medicines without the benefit of a face to face consultation.</p>
+	<h4>e. Privacy</h4>
+		<p>To take all reasonable steps to protect patients' personal information as described in paragraph 1 above.</p>
+	
+	<h3>4. Your commitments when using the service</h3>
+		<p>As the patient, you commit:</p>
+	<h4>a. Accurate information</h4>
+		<p>To answer all questions truthfully and fully.</p>
+	<h4>b. Personal registration</h4>
+		<p>To not register more than once.</p>
+	<h4>c. Registration for someone other than yourself</h4>
+		<p>Not to register for, or use this service, on behalf of someone else.</p>
+	<h4>d. Comply with instructions</h4>
+		<p>To read carefully, each communication before taking any medicines that our doctors have prescribed and to comply with any instructions given for each medicine. In the event that you are uncertain as to how to take any medicine we have provided to you, you will contact us and not take the medicine until you have sufficient information from us and understand the correct instructions.</p>
+	<h4>e. Decisions at HomeBloodPressure.co.uk</h4>
+		<p>To accept HomeBloodPressure.co.uk’s decision when our doctor determines that it is not in your best interests to receive medicine without the benefit of a face-to-face consultation.</p>
+	<h4>f. Notify your GP</h4>
+		<p>We will always offer to notify your GP of any medicines that we have prescribed, but if you decline to take up our offer to contact your GP, it is your responsibility to notify your GP (see paragraph 1a above). If you decide not to notify your GP, it is important that you keep a record of any medicines that we have prescribed.</p>
+	<h4>g. Protect medicines</h4>
+		<p>To ensure that no-one other than yourself has access to any medicines that we make available to you.</p>
+	<h4>h. Expiry date</h4>
+		<p>To ensure that any medicines prescribed in advance of need are not used beyond their expiry date.</p>
+	<h4>i. Notify side-effects</h4>
+		<p>To inform HomeBloodPressure.co.uk if you experience any side-effects from any medicines we make available to you.</p>
+	
+	<h3>5. Information and advice</h3>
+		<p>The information and advice provided by HomeBloodPressure.co.uk when you use the service is based on the information you have supplied to us. It is your responsibility to ensure this information is correct and complete and you accept that failure to do so (whether intentionally or not) will affect the information and advice we give to you and the medicines we supply to you and, as such, may have consequences for which we are not responsible. We aim to respond to all requests for information and advice within 24 hours.</p>
+	
+	<h3>6. Pricing</h3>
+		<p>All prices on this website are in pounds sterling and include VAT unless expressly stated otherwise. We take care to ensure that all pricing information on our website is accurate but occasionally there may be an error. In the event that an error has occurred and the price charged is too high, we will identify all those that have overpaid and refund the difference.</p>
+	
+	<h3>7. Placing and cancelling an order for a prescription</h3>
+		<p>When our service includes the provision of a prescription for medicines, at the point that you pay for the prescription we will have commenced our service and there will be no ability to cancel it after this point. As such you will have no legal right to cancel your order under the Consumer Protection (Distance Selling) Regulations.</p>
+	
+	<h3>8. Payment and refunds</h3>
+		<p>In providing payment card details, you confirm that you are authorised to use the card and authorise us, or our payment service provider, to take payment in full for the items in your order and any associated postage and packaging fees and any other charges that become due to us under these terms and conditions. Refunds, if applicable, will only be made using the payment gateway (e.g Paypal) to the card originally used for payment. Refunds may take up to five working days to appear on a card statement.</p>
+		
+	<h3>9. Delivery of prescriptions</h3>
+		<p>Prescriptions for delivery by post will be dispatched normally within one working day of the doctor authorising the supply of the medicine. All prescriptions are sent out using Royal Mail Special Delivery, for delivery the next working day before 1pm.</p>
+	
+	<h3>10. Signature on delivery of medicines</h3>
+		<p>It is your responsibility to ensure that someone is available to sign for any prescriptions that are delivered at your chosen delivery address or to collect the prescription from Royal Mail yourself. The person signing for prescriptions does not need to be the named patient. You acknowledge and accept that we have no control over the postal system and we have no liability in respect of items that are not received by you after we have dispatched them. It is your responsibility to ensure that the person signing for the prescriptions delivers them to you.</p>
+	
+	<h3>11. Notification of errors</h3>
+		<p>You should check each prescription promptly upon receipt. If you believe that it contains any errors you should contact us immediately.</p>
+	
+	<h3>12. Our liability to you</h3>
+		<p>HomeBloodPressure.co.uk accepts full clinical responsibility for all of its patients to the full extent that the law requires. We will not be liable for any loss or damage (in contract negligence or otherwise) where:</p>
+		<p>- There is no breach of a legal duty of care owed to you by us or;</p>
+		<p>- The loss or damage is not a reasonably foreseeable result of any such breach or;</p>
+		<p>- Any loss or damage or increased risk of loss or damage results from a breach by you of these terms and conditions.</p>
+		<br />
+		<p>In particular, we are not responsible for:</p>
+		<p>- loss or damage caused by you providing inaccurate or incomplete information;</p>
+		<p>- loss of your emotional well-being including, but not limited to, any embarrassment caused;</p>
+		<p>- loss of income or anticipated profits;</p>
+		<p>- loss of opportunity;</p>
+		<p>- loss of goodwill or injury to reputation;</p>
+		<p>- losses suffered by third parties; or</p>
+		<p>- any indirect, consequential, special or exemplary damages arising from the use of the service regardless of the form of action.</p>
+		<br />
+		<p>Nothing in these terms and conditions excludes or limits our liability for death or personal injury caused by our negligence or for fraud or fraudulent misrepresentation. Nothing in these terms and conditions affects your statutory rights.</p>
+	
+	<h3>13. Information on this website</h3>
+		<p>We take care to ensure that all information available on our website about our business, services and any products mentioned is accurate. However, these are continually developing and, occasionally, the information may be out of date. General medical information provided on the website – as opposed to personalised information you may receive via email or when signed in to your account - is not a substitute for specific and personalised medical advice and should not be read or used as such.</p>
+	
+	<h3>14. Links from this website</h3>
+		<p>We may, from time to time, provide links from this website to websites that are owned and controlled by third parties. These links are provided only for your convenience and we have no control over and will have no liability in respect of those websites.</p>
+	
+	<h3>15. Use of the service outside of the United Kingdom</h3>
+		<p>HomeBloodPressure.co.uk makes no claims or representations that any or all of the content on this website, or the service may be lawfully viewed, downloaded or used outside the United Kingdom. Unless otherwise expressly stated, the content, this website and the service is directed solely at users who access this website from within the United Kingdom.</p>
+		<p>If you choose to access the website from outside of the United Kingdom you do so at your own risk and are responsible for compliance with the laws of your jurisdiction.</p>
+	
+	<h3>16. Third party rights</h3>
+		<p>Nothing in these Terms and Conditions is intended to, nor shall it confer a benefit on any third party under the Contracts (Rights of Third Parties) Act 1999 and a person who is not a party to these Terms and Conditions has no rights to enforce them.</p>
+	
+	<h3>17. Waiver</h3>
+		<p>No delay or decision not to enforce rights under these Terms and Conditions will constitute a waiver of the right to do so and will not affect rights in relation to a subsequent breach.</p>
+	
+	<h3>18. Governing law</h3>
+		<p>These Terms and Conditions are subject to the laws of England and each of us hereby submits to the non-exclusive jurisdiction of the English courts.</p>
+		<p>We reserve the right to change these terms and conditions at any time. The new version will be posted on this website and will take effect immediately upon posting. If you use this website after the new terms and conditions have come into effect, you will be indicating your agreement to be bound by the new terms and conditions.</p>
 </div>
