--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -5,6 +5,16 @@
     margin: 0px 45px 10px 25px;
     color: #000000;
   }
+  
+  #call_to_action {
+    margin-left: 375px;
+    width: 200px;
+    
+    a:link, a:visited, a:hover {
+      color:#000000;
+      text-decoration:none;
+    }
+  }
 }
 
 h3 {
