--- a/app/views/notifier/sign_up.html.erb
+++ b/app/views/notifier/sign_up.html.erb
@@ -1,29 +1,31 @@
-<div id='mailer_sign_up'>
+<div id='mailer_sign_up' style='font-family: arial, sans-serif; font-size: 10pt;'>
 
-<h1>Welcome to HomeBloodPressure.co.uk</h1>
+<h1 style='color: #033076;
+    font-size: 18pt;
+    margin-bottom: 20px;'>Welcome to HomeBloodPressure.co.uk</h1>
 
-<p><%= @greeting %></p>
+<p style='margin: 10px 45px 0px 25px;'><%= @greeting %></p>
 
-<p>You have taken the first step to taking control of your own blood pressure from the convenience of your own home.</p>
+<p style='margin: 10px 45px 0px 25px;'>You have taken the first step to taking control of your own blood pressure from the convenience of your own home.</p>
 
-<p>Please go to <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> to take <%= @a_another_reading %> pair of blood pressure readings <%= @when_next_reading %>.</p>
+<p style='margin: 10px 45px 0px 25px;'>Please go to <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> to take <%= @a_another_reading %> pair of blood pressure readings <%= @when_next_reading %>.</p>
 
-<p>Your blood pressure tends to go up and down depending on what you’ve been doing. This means that when you measure it at different times of day, you’ll get different readings. Your blood pressure can go up during exercise, after you drink a cup of coffee, or when you are stressed about something.</p>
+<p style='margin: 10px 45px 0px 25px;'>Your blood pressure tends to go up and down depending on what you’ve been doing. This means that when you measure it at different times of day, you’ll get different readings. Your blood pressure can go up during exercise, after you drink a cup of coffee, or when you are stressed about something.</p>
 
-<p>Another thing that can send your blood pressure up is going to the doctors. This is known as “white coat hypertension”. It used to be thought that it wasn’t very common. As more research has been done, we now know that most people’s blood pressure is lower when you measure it at home.</p>
+<p style='margin: 10px 45px 0px 25px;'>Another thing that can send your blood pressure up is going to the doctors. This is known as “white coat hypertension”. It used to be thought that it wasn’t very common. As more research has been done, we now know that most people’s blood pressure is lower when you measure it at home.</p>
 
-<p>This means that if you measure your blood pressure at home, it is more likely to give you a true reading of what your blood pressure is. Because it is likely to be slightly lower than when it’s measured elsewhere, it may mean that you don’t need to take any medication whatsoever.</p>
+<p style='margin: 10px 45px 0px 25px;'>This means that if you measure your blood pressure at home, it is more likely to give you a true reading of what your blood pressure is. Because it is likely to be slightly lower than when it’s measured elsewhere, it may mean that you don’t need to take any medication whatsoever.</p>
 
-<p>For the same reason, because your blood pressure goes up and down, it is better to take an average of a number of readings. This is because an average blood pressure gives a better idea of your risk of having a heart attack or stroke than any single reading.</p>
+<p style='margin: 10px 45px 0px 25px;'>For the same reason, because your blood pressure goes up and down, it is better to take an average of a number of readings. This is because an average blood pressure gives a better idea of your risk of having a heart attack or stroke than any single reading.</p>
 
-<p>To get the best possible measure of your average blood pressure, you should take the best of two readings. They should be two minutes apart. This should be done in the morning (or when you get up) and in the evening (or just before you go to bed). The more readings that you take, the better the result. You should aim to measure your blood pressure for 7 days. The minimum that you need to get an accurate result is 4 days of measurements.</p>
+<p style='margin: 10px 45px 0px 25px;'>To get the best possible measure of your average blood pressure, you should take the best of two readings. They should be two minutes apart. This should be done in the morning (or when you get up) and in the evening (or just before you go to bed). The more readings that you take, the better the result. You should aim to measure your blood pressure for 7 days. The minimum that you need to get an accurate result is 4 days of measurements.</p>
 
-<p>You may feel that this is quite complicated. We agree, which is why we have designed and built this website to help you. Now you have registered with us, we’ll send you reminders to check your blood pressure, and help you keep track of your measurements.</p>
+<p style='margin: 10px 45px 0px 25px;'>You may feel that this is quite complicated. We agree, which is why we have designed and built this website to help you. Now you have registered with us, we’ll send you reminders to check your blood pressure, and help you keep track of your measurements.</p>
 
-<p>So, <%= @when_next_reading %>, please go to <%= link_to 'HomeBloodPressure.co.uk', new_user_session_url %> to take <%= @a_another_reading %> pair of blood pressure readings.</p>
+<p style='margin: 10px 45px 0px 25px;'>So, <%= @when_next_reading %>, please go to <%= link_to 'HomeBloodPressure.co.uk', new_user_session_url %> to take <%= @a_another_reading %> pair of blood pressure readings.</p>
 
-<p>Stay healthy!</p>
+<p style='margin: 10px 45px 0px 25px;'>Stay healthy!</p>
 
-<p>The HomeBloodPressure.co.uk team</p>
+<p style='margin: 10px 45px 0px 25px;'>The HomeBloodPressure.co.uk team</p>
 
 </div>
