--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -4,11 +4,13 @@
 	<% if @warning_message %>
 		<p id='warning_msg'><%= @warning_message %></p><br />
 	<% end %>
-	<p><%= @message %></p>
+	<p><%= @average_bp_message %></p>
 	<br />
-	<p>...However, to get a more accurate picture of what your blood pressure is like we need to take more readings like this over the next 4 days. Also, some other illnesses can change what is considered to be a healthy blood pressure - we will give you expert, personalised advice based on your individual health.</p>
+	<p>...However, to get a more accurate picture of what your blood pressure is like we need to take more readings like this over the next 4 days. Some other illnesses also affect what is considered to be a healthy blood pressure - we will give you expert, personalised advice based on your individual health.</p>
 	<br />
-	<% if !user_signed_in? %>
+	<% if user_signed_in? %>
+		<p>Please come back to HomeBloodPressure.co.uk to take another pair of readings <span><%= @when_next_reading %></span>.</p>
+	<% else %>
 		<p>Sign up so you can check your blood pressure over the next 4 days and receive free personalised advice on how best to control it. We cover everything from lifestyle advice through to supplying prescriptions for medications.</p>
 		<div id='sign_up'>
 			<%= render :partial => 'devise/registrations/new' %>
