--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -98,6 +98,7 @@ h1 {
         
         #forgot_pwd_button {
           padding: 10px 0px 20px 30px;
+          font-size: 10pt;
         }
       
         #forgot_pwd_txt {
