--- a/app/views/notifier/reset_password_instructions.html.erb
+++ b/app/views/notifier/reset_password_instructions.html.erb
@@ -1,8 +1,14 @@
-<p>Hello <%= @resource.email %>!</p>
+<div style='font-family: arial, sans-serif; font-size: 10pt;'>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<h1 style='color: #033076;
+    font-size: 18pt;
+    margin-bottom: 20px;'>Reset password for HomeBloodPressure.co.uk</h1>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p style='margin: 10px 45px 0px 25px;'>Hello <%= @resource.email %>!</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p style='margin: 10px 45px 0px 25px;'>Someone has requested a link to reset your password. You can do this through the link below.</p>
+
+<p style='margin: 10px 45px 0px 25px;'><%= link_to 'Reset my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+
+<p style='margin: 10px 45px 0px 25px;'>If you didn't request this, please ignore this email.</p>
+<p style='margin: 10px 45px 0px 25px;'>Your password won't change until you access the link above and create a new one.</p>
