--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -58,7 +58,7 @@ h1 {
       }
     }
     
-    #sign_up, #sign_in, #forgot_pwd {
+    #sign_up, #sign_in, #forgot_pwd, #change_pwd {
       float: left;
       width: 400px;
       margin: 30px 0px 10px 40px;
@@ -97,7 +97,12 @@ h1 {
         }
         
         #forgot_pwd_button {
-          padding: 10px 0px 20px 30px;
+          padding: 10px 0px 20px 50px;
+          font-size: 10pt;
+        }
+        
+        #change_pwd_button {
+          padding: 10px 0px 20px 60px;
           font-size: 10pt;
         }
       
