--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,39 @@
+<div id='main'>
+	<div id='change_pwd'>
+		<div id='title'>
+			Change your password
+		</div>
+		
+		<div id='nav_form'>
+			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+			<%= f.hidden_field :reset_password_token %>
+			<table>
+				<tr>
+					<td><%= f.label :password, "New password" %></td>
+					<td><%= f.password_field :password, :autofocus => true %></td>
+				</tr>
+				<tr>
+					<td><%= f.label :password_confirmation, "Confirm new password" %></td>
+					<td><%= f.password_field :password_confirmation %></td>
+				</tr>
+			</table>
+		
+			<% if resource.errors.any? %>
+				<div id="error_explanation">
+					<%= error_messages_for resource %>
+				</div>
+			<% end %>
+			
+			<div id='change_pwd_button'>
+  				<%= f.submit "Change my password", :class => 'button5' %>
+  			</div>
+  			
+			<% end %>
+		</div>
+	</div>
+</div>
+
+<!--
 <h2>Change your password</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -14,3 +50,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+-->
