01/01/13 forgot pwd complete

--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -97,11 +97,13 @@ h1 {
         }
         
         #forgot_pwd_button {
+          float: left;
           padding: 10px 0px 20px 50px;
           font-size: 10pt;
         }
         
         #change_pwd_button {
+          float: left;
           padding: 10px 0px 20px 90px;
           font-size: 10pt;
         }
