--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 	
 	<div id='bottombar'>
 		<%= link_to 'About us', static_pages_about_path %>
-		<%= link_to 'Contact us', static_pages_contact_us_path %>
+		<%= link_to 'Contact us', new_message_path %>
 		<%= link_to 'Terms & Conditions', static_pages_tac_path %>
 		<span>&#169; 2013</span>
 	</div>
