02/10/13 contact us working

--- a/app/views/notifier/contact_us.html.erb
+++ b/app/views/notifier/contact_us.html.erb
@@ -1,5 +1,5 @@
-Message from: <%= @name %>
+<p style='margin: 10px 10px 0px 10px;'>Message from: <%= @name %></p>
 
-Email: <%= @email %>
+<p style='margin: 10px 10px 0px 10px;'>Email: <%= @email %></p>
 
-<%= @content %>
+<p style='margin: 10px 10px 0px 10px;'><%= @content %></p>
