--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -17,5 +17,5 @@
 
 <div id='how_to_measure_bp'>
 	<h1>How do I measure my blood pressure?</h1>
-	<p>If you need advice on how to measure your blood pressure, please see our <a href="">blood pressure measurement guide.</a></p>
+	<p>If you need advice on how to measure your blood pressure, please see our <%= link_to "blood pressure measurement guide.", static_pages_how_to_monitor_bp_path %></p>
 </div>
