04/10/13 finished bp measurement guide

--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -213,7 +213,7 @@ h1 {
     }
   }
   
-  #how_to_measure_bp {
+  #how_to_measure_bp_guide {
     float:left;
     margin: 20px 0px 30px 0px;
     
