--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -77,7 +77,7 @@
     }
   }
   
-  #how_to_monitor_bp, #choosing_a_monitor {
+  #how_to_monitor_bp, #choosing_a_monitor, #how_to_measure_bp, #when_to_measure_bp {
     
     h3 {
       font-size: 16pt;
@@ -85,6 +85,9 @@
       font-weight: normal;
       margin: 30px 0px 10px 0px;
     }
+  }
+  
+  #choosing_a_monitor {
     
     #cufftable {
       margin: 0px 0px 10px 100px;
