--- a/app/views/current_bps/new2.html.erb
+++ b/app/views/current_bps/new2.html.erb
@@ -14,7 +14,7 @@
 	<% end %>
 </div>
 
-<div id='how_to_measure_bp'>
+<div id='how_to_measure_bp_guide'>
 	<h1>How do I measure my blood pressure?</h1>
 	<p>If you need advice on how to measure your blood pressure, please see our <a href="">blood pressure measurement guide.</a></p>
 </div>
