--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -6,16 +6,6 @@
     color: #000000;
   }
   
-  #call_to_action {
-    margin-left: 375px;
-    width: 200px;
-    
-    a:link, a:visited, a:hover {
-      color:#000000;
-      text-decoration:none;
-    }
-  }
-  
   #about_us {
     
     .about_us_box {
@@ -99,6 +89,70 @@
       td.bold {
         padding: 5px 10px 2px 10px;
         font-weight: bold;
+      }
+    }
+  }
+  
+  #landing_page_bp_treatment {
+    float:left;
+    
+    #heart_bp_monitor_pic {
+      float: left;
+      width: 155px;
+      height: 125px;
+      margin: 10px 0px 10px 10px;
+      padding: 3px;
+      border-style:solid;
+      border-width:2px;
+      border-color:#033076;
+    }
+    
+    #questions {
+      float: left;
+      margin: 5px 0px 20px 20px;
+      width: 600px;
+      
+      h3, h4 ,h5 {
+        font-size: 16pt;
+        color: #0844a4;
+        font-weight: normal;
+        margin: 10px 0px 0px 20px;
+        line-height: 28px;
+      }
+      
+      h4 {
+        margin-left:40px;
+      }
+      
+      h5 {
+        margin-left:60px;
+      }
+    }
+    
+    #the_right_place {
+      float: left;
+      margin: 0px 0px 0px 120px;
+      
+      h3 {
+        font-size: 16pt;
+        color: #0844a4;
+        font-weight: normal;
+      }
+    }
+    
+    #landing_page_content {
+      float: left;
+      width: 600px;
+    }
+  
+    #call_to_action {
+      float: left;
+      margin: 200px 0px 20px 275px;
+      width: 200px;
+    
+      a:link, a:visited, a:hover {
+        color:#000000;
+        text-decoration:none;
       }
     }
   }
