04/10/13 smaller image for heart_bp_monitor

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,7 +1,7 @@
 <div id='main_full_width'>
 	<div id='landing_page_bp_treatment'>
 		<div id='heart_bp_monitor_pic'>
-			<%= image_tag("heart_bp_monitor.jpg", size: '150x120') %>
+			<%= image_tag("heart_bp_monitor_small.jpg", size: '150x120') %>
 		</div>
 		
 		<div id='questions'>
