--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -52,6 +52,10 @@ h1 {
         margin-left: 120px;
       }
       
+      #errorExplanation {
+        width: 350px;
+      }
+      
       #submit {
         float:left;
         margin: 20px 0px 0px 260px;
@@ -223,6 +227,135 @@ h1 {
     }
   }
 }
+
+#main_full_width {
+  width: 930px;
+  
+  p {
+    margin: 0px 45px 10px 25px;
+    color: #000000;
+  }
+    
+  #how_to_monitor_bp, #choosing_a_monitor, #how_to_measure_bp, #when_to_measure_bp {
+    
+    h3 {
+      font-size: 16pt;
+      color: #0844a4;
+      font-weight: normal;
+      margin: 30px 0px 10px 0px;
+    }
+  }
+  
+  #choosing_a_monitor {
+    
+    #cufftable {
+      margin: 0px 0px 10px 100px;
+      
+      td {
+        text-align:center;
+      }
+      
+      td.bold {
+        padding: 5px 10px 2px 10px;
+        font-weight: bold;
+      }
+    }
+  }
+  
+  #landing_page_bp_treatment {
+    float:left;
+    
+    #heart_bp_monitor_pic {
+      float: left;
+      width: 155px;
+      height: 125px;
+      margin: 10px 0px 10px 10px;
+      padding: 3px;
+      border-style:solid;
+      border-width:2px;
+      border-color:#033076;
+    }
+    
+    #questions {
+      float: left;
+      margin: 5px 0px 20px 20px;
+      width: 600px;
+      
+      h3, h4 ,h5 {
+        font-size: 16pt;
+        color: #0844a4;
+        font-weight: normal;
+        margin: 10px 0px 0px 20px;
+        line-height: 28px;
+      }
+      
+      h4 {
+        margin-left:40px;
+      }
+      
+      h5 {
+        margin-left:60px;
+      }
+    }
+    
+    #the_right_place {
+      float: left;
+      margin: 0px 0px 0px 120px;
+      
+      h3 {
+        font-size: 16pt;
+        color: #0844a4;
+        font-weight: normal;
+      }
+    }
+    
+    #landing_page_content {
+      float: left;
+      width: 600px;
+    }
+    
+    #cta_bp_entry {
+      float: left;
+      width: 300px;
+      margin: 0px 0px 10px 0px;
+      border-style:solid;
+      border-width:2px;
+      border-color:#033076;
+      -webkit-border-radius:10px;
+      -moz-border-radius:10px;
+      border-radius:10px;
+      background-color:#ffffff;
+      
+      #title {
+        padding: 5px 20px 5px 20px;
+        line-height: 28px;
+        float:left;
+      }
+      
+      p {
+        margin: 10px;
+        text-align: center;
+        float:left;
+      }
+      
+      #input_bp {
+        margin: 10px 25px 0px 35px;
+        float: left;
+        
+        #input_bp_boxes {
+          float:left;
+        }
+        
+        #submit {
+          float:left;
+          margin: 20px 0px 20px 80px;
+        }
+      }
+    }
+  }
+}
+
+
 
 #title {
       border-style:solid;
