--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -50,25 +50,21 @@ a:hover {
   display: table;
 }
 
-#error_explanation {
+#errorExplanation {
   float: left;
-  width: 350px;
   border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
+  padding: 5px 0px 5px 0px;
   margin: 10px 0px 0px 0px;
   background-color: #f0f0f0;
   h2 {
     text-align: left;
     font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
+    font-size: 12pt;
     background-color: #c00;
     color: #fff;
   }
   ul li {
+    float:left;
     font-size: 12px;
     list-style: square;
   }
